# HxA

./: CMakeLists.txt  LICENSE  aces.c  aces.h  f_text.c  forge.h  hxa.h  hxa_convesion_generated.c  hxa_fbx_convert.c  hxa_fbx_internal.h  hxa_fbx_parse.c  hxa_load_save.c  hxa_load_save_upi_wrapper.c  hxa_persuade_image_test.c  hxa_print.c  hxa_print_upi.c  hxa_serialize.c  hxa_upi.h  hxa_upi_command_line_interface.c  hxa_upi_host.c  hxa_upi_plugin.c  hxa_util_close.c  hxa_util_command_line.c  hxa_util_convert.c  hxa_util_fbx_convert.c  hxa_util_fbx_internal.h  hxa_util_fbx_parse.c  hxa_util_font_process.c  hxa_util_gpu_optimize.c  hxa_util_inflate.c  hxa_util_merge_split.c  hxa_util_meta.c  hxa_util_neighbour.c  hxa_util_normals.c  hxa_util_normals.h  hxa_util_obj.c  hxa_util_png.c  hxa_util_primitive.c  hxa_util_primitive_upi.c  hxa_util_triangulate.c  (+6 more)
